--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <div class="profession">Reviewer</div>
           </div>
           <div class="col-xs-9">
-            <div class="where">AAAI, ACL, ACM-SIGIR, AI Magazine, CSL, CoNLL, EMNLP, ICLR, IEEE ASRU, IEEE ICASSP, IEEE SLT, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, Interspeech, NAACL-HLT</div>
+            <div class="where">AAAI, ACL, ACM-SIGIR, AI Magazine, CSL, CoNLL, EMNLP, ICLR, IEEE ASRU, IEEE ICASSP, IEEE SLT, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, Interspeech, NAACL-HLT, NeurIPS</div>
           </div>
         </div>
       </div>
@@ -947,7 +947,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2020-03-24</div>
+      <div id="footer">Last updated: 2020-04-07</div>
     </div>
   </body>
 </html>
