--- a/index.html
+++ b/index.html
@@ -302,6 +302,15 @@
             <div class="year">2020</div>
           </div>
           <div class="col-xs-11">
+            <div style="display:inline" class="pid_conference">[C52] </div>
+            <div style="display:inline" class="title">Video Question Answering on Screencast Tutorials.</div>
+            <div class="author">Wentian Zhao, <span>Seokhwan Kim</span>, Ning Xu, Hailin Jin</div>
+            <div class="book">To appear in Proceedings of the 29th International Joint Conference on Artificial Intelligence and the 17th Pacific Rim International Conference on Artificial Intelligence (<a href="https://ijcai20.org/" target="_blank">IJCAI-PRICAI 2020</a>), Yokohama, Jul 2020.<div style="display:inline" class="rate"> (12.6% acceptance)</div></div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C51] </div>
             <div style="display:inline" class="title">Screencast Tutorial Video Understanding.</div>
             <div class="author">Kunpeng Li, Chen Fang, Zhaowen Wang, <span>Seokhwan Kim</span>, Hailin Jin, Yun Fu</div>
@@ -947,7 +956,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2020-04-07</div>
+      <div id="footer">Last updated: 2020-04-20</div>
     </div>
   </body>
 </html>
