--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           <div class="col-xs-1"></div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C50] </div>
-            <div style="display:inline" class="title">TutorialVQA: Question Answering Dataset for Tutorial Videos.</div>
+            <div style="display:inline" class="title">TutorialVQA: Question Answering Dataset for Tutorial Videos.<div style="display:inline" class="link"><a href="https://arxiv.org/abs/1912.01046" target="_blank">[preprint]</a></div></div>
             <div class="author">Anthony Colas, <span>Seokhwan Kim</span>, Franck Dernoncourt, Siddhesh Gupte, Zhe Wang, Doo Soon Kim</div>
             <div class="book">To appear in Proceedings of the 12th International Conference on Language Resources and Evaluation (<a href="https://lrec2020.lrec-conf.org/en/" target="_blank">LREC 2020</a>), Marseille, May 2020.</div>
           </div>
@@ -956,7 +956,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2020-04-20</div>
+      <div id="footer">Last updated: 2020-04-25</div>
     </div>
   </body>
 </html>
