--- a/index.html
+++ b/index.html
@@ -302,6 +302,15 @@
             <div class="year">2020</div>
           </div>
           <div class="col-xs-11">
+            <div style="display:inline" class="pid_conference">[C53] </div>
+            <div style="display:inline" class="title">Beyond Domain APIs: Task-oriented Conversational Modeling with Unstructured Knowledge Access.</div>
+            <div class="author"><span>Seokhwan Kim</span>, Mihail Eric, Karthik Gopalakrishnan, Behnam Hedayatnia, Yang Liu, Dilek Hakkani-Tur</div>
+            <div class="book">To appear in Proceedings of The 21st Annual Meeting of the Special Interest Group on Discourse and Dialogue (<a href="https://www.sigdial.org/files/workshops/conference21/" target="_blank">SIGDIAL 2020</a>), Boise, Jul 2020.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C52] </div>
             <div style="display:inline" class="title">Video Question Answering on Screencast Tutorials.</div>
             <div class="author">Wentian Zhao, <span>Seokhwan Kim</span>, Ning Xu, Hailin Jin</div>
@@ -956,7 +965,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2020-04-25</div>
+      <div id="footer">Last updated: 2020-04-29</div>
     </div>
   </body>
 </html>
