--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
           </div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C53] </div>
-            <div style="display:inline" class="title">Beyond Domain APIs: Task-oriented Conversational Modeling with Unstructured Knowledge Access.</div>
+            <div style="display:inline" class="title">Beyond Domain APIs: Task-oriented Conversational Modeling with Unstructured Knowledge Access.<div style="display:inline" class="link"><a href="https://arxiv.org/abs/2006.03533" target="_blank">[preprint]</a></div></div>
             <div class="author"><span>Seokhwan Kim</span>, Mihail Eric, Karthik Gopalakrishnan, Behnam Hedayatnia, Yang Liu, Dilek Hakkani-Tur</div>
             <div class="book">To appear in Proceedings of The 21st Annual Meeting of the Special Interest Group on Discourse and Dialogue (<a href="https://www.sigdial.org/files/workshops/conference21/" target="_blank">SIGDIAL 2020</a>), Boise, Jul 2020.</div>
           </div>
@@ -323,7 +323,7 @@
             <div style="display:inline" class="pid_conference">[C51] </div>
             <div style="display:inline" class="title">Screencast Tutorial Video Understanding.</div>
             <div class="author">Kunpeng Li, Chen Fang, Zhaowen Wang, <span>Seokhwan Kim</span>, Hailin Jin, Yun Fu</div>
-            <div class="book">To appear in Proceedings of the 2020 IEEE/CVF Conference on Computer Vision and Pattern Recognition (<a href="http://cvpr2020.thecvf.com/" target="_blank">CVPR 2020</a>), Seattle, Jun 2020.</div>
+            <div class="book">Proceedings of the 2020 IEEE/CVF Conference on Computer Vision and Pattern Recognition (<a href="http://cvpr2020.thecvf.com/" target="_blank">CVPR 2020</a>), Seattle, Jun 2020.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -332,7 +332,7 @@
             <div style="display:inline" class="pid_conference">[C50] </div>
             <div style="display:inline" class="title">TutorialVQA: Question Answering Dataset for Tutorial Videos.<div style="display:inline" class="link"><a href="https://arxiv.org/abs/1912.01046" target="_blank">[preprint]</a></div></div>
             <div class="author">Anthony Colas, <span>Seokhwan Kim</span>, Franck Dernoncourt, Siddhesh Gupte, Zhe Wang, Doo Soon Kim</div>
-            <div class="book">To appear in Proceedings of the 12th International Conference on Language Resources and Evaluation (<a href="https://lrec2020.lrec-conf.org/en/" target="_blank">LREC 2020</a>), Marseille, May 2020.</div>
+            <div class="book">Proceedings of the 12th International Conference on Language Resources and Evaluation (<a href="https://lrec2020.lrec-conf.org/en/" target="_blank">LREC 2020</a>), Marseille, May 2020.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -965,7 +965,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2020-04-29</div>
+      <div id="footer">Last updated: 2020-06-08</div>
     </div>
   </body>
 </html>
