--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           <div class="col-xs-1"></div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C51] </div>
-            <div style="display:inline" class="title">Screencast Tutorial Video Understanding.</div>
+            <div style="display:inline" class="title">Screencast Tutorial Video Understanding.<div style="display:inline" class="link"><a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Li_Screencast_Tutorial_Video_Understanding_CVPR_2020_paper.pdf" target="_blank">[PDF]</a></div></div>
             <div class="author">Kunpeng Li, Chen Fang, Zhaowen Wang, <span>Seokhwan Kim</span>, Hailin Jin, Yun Fu</div>
             <div class="book">Proceedings of the 2020 IEEE/CVF Conference on Computer Vision and Pattern Recognition (<a href="http://cvpr2020.thecvf.com/" target="_blank">CVPR 2020</a>), Seattle, Jun 2020.</div>
           </div>
