--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             <div style="display:inline" class="pid_conference">[C51] </div>
             <div style="display:inline" class="title">Screencast Tutorial Video Understanding.<div style="display:inline" class="link"><a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Li_Screencast_Tutorial_Video_Understanding_CVPR_2020_paper.pdf" target="_blank">[PDF]</a></div></div>
             <div class="author">Kunpeng Li, Chen Fang, Zhaowen Wang, <span>Seokhwan Kim</span>, Hailin Jin, Yun Fu</div>
-            <div class="book">Proceedings of the 2020 IEEE/CVF Conference on Computer Vision and Pattern Recognition (<a href="http://cvpr2020.thecvf.com/" target="_blank">CVPR 2020</a>), Seattle, Jun 2020.</div>
+            <div class="book">Proceedings of the 2020 IEEE/CVF Conference on Computer Vision and Pattern Recognition (<a href="http://cvpr2020.thecvf.com/" target="_blank">CVPR 2020</a>), Seattle, Jun 2020.<div style="display:inline" class="rate"> (22.1% acceptance)</div></div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -341,7 +341,7 @@
             <div style="display:inline" class="pid_conference">[C49] </div>
             <div style="display:inline" class="title">Just ask: An Interactive Learning Framework for Vision and Language Navigation.<div style="display:inline" class="link"><a href="https://arxiv.org/abs/1912.00915" target="_blank">[preprint]</a></div></div>
             <div class="author">Ta-Chung Chi, Mihail Eric, <span>Seokhwan Kim</span>, Minmin Shen, Dilek Hakkani-tur</div>
-            <div class="book">Proceedings of the Thirty-Fourth AAAI Conference on Artificial Intelligence (<a href="https://aaai.org/Conferences/AAAI-20/" target="_blank">AAAI-20</a>), New York, Feb 2020.</div>
+            <div class="book">Proceedings of the Thirty-Fourth AAAI Conference on Artificial Intelligence (<a href="https://aaai.org/Conferences/AAAI-20/" target="_blank">AAAI-20</a>), New York, Feb 2020.<div style="display:inline" class="rate"> (20.6% acceptance)</div></div>
           </div>
         </div>
         <div class="publication clearfix">
