--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             <div style="display:inline" class="pid_conference">[C46] </div>
             <div style="display:inline" class="title">Scoring Sentence Singletons and Pairs for Abstractive Summarization.<div style="display:inline" class="link"><a href="https://www.aclweb.org/anthology/P19-1209" target="_blank">[PDF]</a></div><div style="display:inline" class="link"><a href="https://aclweb.org/anthology/papers/P/P19/P19-1209.bib" target="_blank">[bib]</a></div></div>
             <div class="author">Logan Lebanoff, Kaiqiang Song, Franck Dernoncourt, Doo Soon Kim, <span>Seokhwan Kim</span>, Walter Chang, Fei Liu</div>
-            <div class="book">Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics (<a href="http://www.acl2019.org/EN/index.xhtml" target="_blank">ACL 2019</a>), pp. 2175-2189, Florence, Jul 2019.</div>
+            <div class="book">Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics (<a href="http://www.acl2019.org/EN/index.xhtml" target="_blank">ACL 2019</a>), pp. 2175-2189, Florence, Jul 2019.<div style="display:inline" class="rate"> (25.7% acceptance)</div></div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -380,7 +380,7 @@
             <div style="display:inline" class="title">Learning Emphasis Selection for Written Text in Visual Media from Crowd-Sourced Label Distributions.<div style="display:inline" class="link"><a href="https://www.aclweb.org/anthology/P19-1112" target="_blank">[PDF]</a></div><div style="display:inline" class="link"><a href="https://www.aclweb.org/anthology/papers/P/P19/P19-1112.bib" target="_blank">[bib]</a></div></div>
             <div class="author">Amirreza Shirani, Franck Dernoncourt, Paul Asente, Nedim Lipka, <span>Seokhwan Kim</span>, Jose Echevarria, Thamar Solorio
 </div>
-            <div class="book">Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics (<a href="http://www.acl2019.org/EN/index.xhtml" target="_blank">ACL 2019</a>), pp. 1167-1172, Florence, Jul 2019.</div>
+            <div class="book">Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics (<a href="http://www.acl2019.org/EN/index.xhtml" target="_blank">ACL 2019</a>), pp. 1167-1172, Florence, Jul 2019.<div style="display:inline" class="rate"> (18.2% acceptance)</div></div>
           </div>
         </div>
         <div class="publication clearfix">
