--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             <div style="display:inline" class="pid_conference">[C42] </div>
             <div style="display:inline" class="title">A Discourse-Aware Attention Model for Abstractive Summarization of Long Documents.<div style="display:inline" class="link"><a href="http://aclweb.org/anthology/N18-2097" target="_blank">[PDF]</a></div><div style="display:inline" class="link"><a href="https://aclanthology.coli.uni-saarland.de/papers/N18-2097/n18-2097.bib" target="_blank">[bib]</a></div></div>
             <div class="author">Arman Cohan, Franck Dernoncourt, Doo Soon Kim, Trung Bui, <span>Seokhwan Kim</span>, Walter Chang, Nazli Goharian</div>
-            <div class="book">Proceedings of the 16th Annual Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (<a href="http://naacl2018.org/" target="_blank">NAACL HLT 2018</a>), pp. 615-621, New Orleans, Jun 2018.</div>
+            <div class="book">Proceedings of the 16th Annual Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (<a href="http://naacl2018.org/" target="_blank">NAACL HLT 2018</a>), pp. 615-621, New Orleans, Jun 2018.<div style="display:inline" class="rate"> (29.4% acceptance)</div></div>
           </div>
         </div>
         <div class="publication clearfix">
