--- a/index.html
+++ b/index.html
@@ -323,16 +323,16 @@
             <div style="display:inline" class="pid_conference">[C51] </div>
             <div style="display:inline" class="title">Screencast Tutorial Video Understanding.<div style="display:inline" class="link"><a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Li_Screencast_Tutorial_Video_Understanding_CVPR_2020_paper.pdf" target="_blank">[PDF]</a></div></div>
             <div class="author">Kunpeng Li, Chen Fang, Zhaowen Wang, <span>Seokhwan Kim</span>, Hailin Jin, Yun Fu</div>
-            <div class="book">Proceedings of the 2020 IEEE/CVF Conference on Computer Vision and Pattern Recognition (<a href="http://cvpr2020.thecvf.com/" target="_blank">CVPR 2020</a>), Seattle, Jun 2020.<div style="display:inline" class="rate"> (22.1% acceptance)</div></div>
+            <div class="book">Proceedings of the 2020 IEEE/CVF Conference on Computer Vision and Pattern Recognition (<a href="http://cvpr2020.thecvf.com/" target="_blank">CVPR 2020</a>), pp. 12526-12535, Seattle, Jun 2020.<div style="display:inline" class="rate"> (22.1% acceptance)</div></div>
           </div>
         </div>
         <div class="publication clearfix">
           <div class="col-xs-1"></div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C50] </div>
-            <div style="display:inline" class="title">TutorialVQA: Question Answering Dataset for Tutorial Videos.<div style="display:inline" class="link"><a href="https://arxiv.org/abs/1912.01046" target="_blank">[preprint]</a></div></div>
+            <div style="display:inline" class="title">TutorialVQA: Question Answering Dataset for Tutorial Videos.<div style="display:inline" class="link"><a href="http://www.lrec-conf.org/proceedings/lrec2020/pdf/2020.lrec-1.670.pdf" target="_blank">[PDF]</a></div><div style="display:inline" class="link"><a href="http://www.lrec-conf.org/proceedings/lrec2020/bib/2020.lrec-1.670.bib" target="_blank">[bib]</a></div></div>
             <div class="author">Anthony Colas, <span>Seokhwan Kim</span>, Franck Dernoncourt, Siddhesh Gupte, Zhe Wang, Doo Soon Kim</div>
-            <div class="book">Proceedings of the 12th International Conference on Language Resources and Evaluation (<a href="https://lrec2020.lrec-conf.org/en/" target="_blank">LREC 2020</a>), Marseille, May 2020.</div>
+            <div class="book">Proceedings of the 12th International Conference on Language Resources and Evaluation (<a href="https://lrec2020.lrec-conf.org/en/" target="_blank">LREC 2020</a>), pp. 5450–5455, Marseille, May 2020.</div>
           </div>
         </div>
         <div class="publication clearfix">
