--- a/index.html
+++ b/index.html
@@ -303,9 +303,9 @@
           </div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C53] </div>
-            <div style="display:inline" class="title">Beyond Domain APIs: Task-oriented Conversational Modeling with Unstructured Knowledge Access.<div style="display:inline" class="link"><a href="https://arxiv.org/abs/2006.03533" target="_blank">[preprint]</a></div></div>
+            <div style="display:inline" class="title">Beyond Domain APIs: Task-oriented Conversational Modeling with Unstructured Knowledge Access.<div style="display:inline" class="link"><a href="https://www.sigdial.org/files/workshops/conference21/pdf/2020.sigdial-1.35.pdf" target="_blank">[PDF]</a></div><div style="display:inline" class="link"><a href="https://www.sigdial.org/files/workshops/conference21/bib/2020.sigdial-1.35.bib" target="_blank">[bib]</a></div></div>
             <div class="author"><span>Seokhwan Kim</span>, Mihail Eric, Karthik Gopalakrishnan, Behnam Hedayatnia, Yang Liu, Dilek Hakkani-Tur</div>
-            <div class="book">To appear in Proceedings of The 21st Annual Meeting of the Special Interest Group on Discourse and Dialogue (<a href="https://www.sigdial.org/files/workshops/conference21/" target="_blank">SIGDIAL 2020</a>), Boise, Jul 2020.</div>
+            <div class="book">Proceedings of The 21st Annual Meeting of the Special Interest Group on Discourse and Dialogue (<a href="https://www.sigdial.org/files/workshops/conference21/" target="_blank">SIGDIAL 2020</a>), pp. 278-289, Boise, Jul 2020.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -314,7 +314,7 @@
             <div style="display:inline" class="pid_conference">[C52] </div>
             <div style="display:inline" class="title">Video Question Answering on Screencast Tutorials.</div>
             <div class="author">Wentian Zhao, <span>Seokhwan Kim</span>, Ning Xu, Hailin Jin</div>
-            <div class="book">To appear in Proceedings of the 29th International Joint Conference on Artificial Intelligence and the 17th Pacific Rim International Conference on Artificial Intelligence (<a href="https://ijcai20.org/" target="_blank">IJCAI-PRICAI 2020</a>), Yokohama, Jul 2020.<div style="display:inline" class="rate"> (12.6% acceptance)</div></div>
+            <div class="book">Proceedings of the 29th International Joint Conference on Artificial Intelligence and the 17th Pacific Rim International Conference on Artificial Intelligence (<a href="https://ijcai20.org/" target="_blank">IJCAI-PRICAI 2020</a>), Yokohama, Jul 2020.<div style="display:inline" class="rate"> (12.6% acceptance)</div></div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -965,7 +965,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2020-06-08</div>
+      <div id="footer">Last updated: 2020-07-01</div>
     </div>
   </body>
 </html>
