--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@
           <div class="col-xs-1"></div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C52] </div>
-            <div style="display:inline" class="title">Video Question Answering on Screencast Tutorials.</div>
+            <div style="display:inline" class="title">Video Question Answering on Screencast Tutorials.<div style="display:inline" class="link"><a href="https://www.ijcai.org/proceedings/2020/0148.pdf" target="_blank">[PDF]</a></div><div style="display:inline" class="link"><a href="https://www.ijcai.org/proceedings/2020/bibtex/148" target="_blank">[bib]</a></div></div>
             <div class="author">Wentian Zhao, <span>Seokhwan Kim</span>, Ning Xu, Hailin Jin</div>
-            <div class="book">Proceedings of the 29th International Joint Conference on Artificial Intelligence and the 17th Pacific Rim International Conference on Artificial Intelligence (<a href="https://ijcai20.org/" target="_blank">IJCAI-PRICAI 2020</a>), Yokohama, Jul 2020.<div style="display:inline" class="rate"> (12.6% acceptance)</div></div>
+            <div class="book">Proceedings of the 29th International Joint Conference on Artificial Intelligence and the 17th Pacific Rim International Conference on Artificial Intelligence (<a href="https://ijcai20.org/" target="_blank">IJCAI-PRICAI 2020</a>), pp. 1061-1068, Yokohama, Jul 2020.<div style="display:inline" class="rate"> (12.6% acceptance)</div></div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -965,7 +965,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2020-07-01</div>
+      <div id="footer">Last updated: 2020-07-14</div>
     </div>
   </body>
 </html>
