--- a/index.html
+++ b/index.html
@@ -302,10 +302,19 @@
             <div class="year">2020</div>
           </div>
           <div class="col-xs-11">
+            <div style="display:inline" class="pid_conference">[C54] </div>
+            <div style="display:inline" class="title">Policy-Driven Neural Response Generation for Knowledge-Grounded Dialog Systems.<div style="display:inline" class="link"><a href="https://arxiv.org/abs/2005.12529" target="_blank">[preprint]</a></div></div>
+            <div class="author">Behnam Hedayatnia, Karthik Gopalakrishnan, <span>Seokhwan Kim</span>, Yang Liu, Mihail Eric, Dilek Hakkani-Tur</div>
+            <div class="book">To appear in Proceedings of the 13th International Conference on Natural Language Generation (<a href="https://www.inlg2020.org/" target="_blank">INLG 2020</a>), Dublin, Dec 2020.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C53] </div>
             <div style="display:inline" class="title">Beyond Domain APIs: Task-oriented Conversational Modeling with Unstructured Knowledge Access.<div style="display:inline" class="link"><a href="https://www.sigdial.org/files/workshops/conference21/pdf/2020.sigdial-1.35.pdf" target="_blank">[PDF]</a></div><div style="display:inline" class="link"><a href="https://www.sigdial.org/files/workshops/conference21/bib/2020.sigdial-1.35.bib" target="_blank">[bib]</a></div></div>
             <div class="author"><span>Seokhwan Kim</span>, Mihail Eric, Karthik Gopalakrishnan, Behnam Hedayatnia, Yang Liu, Dilek Hakkani-Tur</div>
-            <div class="book">Proceedings of The 21st Annual Meeting of the Special Interest Group on Discourse and Dialogue (<a href="https://www.sigdial.org/files/workshops/conference21/" target="_blank">SIGDIAL 2020</a>), pp. 278-289, Boise, Jul 2020.</div>
+            <div class="book">Proceedings of the 21st Annual Meeting of the Special Interest Group on Discourse and Dialogue (<a href="https://www.sigdial.org/files/workshops/conference21/" target="_blank">SIGDIAL 2020</a>), pp. 278-289, Boise, Jul 2020.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -965,7 +974,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2020-07-14</div>
+      <div id="footer">Last updated: 2020-10-12</div>
     </div>
   </body>
 </html>
