--- a/index.html
+++ b/index.html
@@ -879,6 +879,14 @@
         <h2>Patents</h2>
         <div class="publication clearfix">
           <div class="col-xs-12">
+            <div style="display:inline" class="pid_patent">[P13] </div>
+            <div style="display:inline" class="title">Emphasizing key points in a speech file and structuring an associated transcription.</div>
+            <div class="author">Franck Dernoncourt, Walter Wei-Tuh Chang, <span>Seokhwan Kim</span>, Sean Fitzgerald, Ragunandan Rao Malangully, Laurie Marie Byrum, Frederic Thevenet, Carl Iwan Dockhorn</div>
+            <div class="book">Registration #US20200004803A1, USA, 22 Sep 2020.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-12">
             <div style="display:inline" class="pid_patent">[P12] </div>
             <div style="display:inline" class="title">Entity Name Tagging Method Capable of Applying an Unsupervised Learning Method Including a Restriction Condition and a Device Thereof.</div>
             <div class="author">Gary Geunbae Lee, <span>Seokhwan Kim</span>, Kyungduk Kim, Donghyeon Lee, Junhwi Choi</div>
@@ -974,7 +982,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2020-10-12</div>
+      <div id="footer">Last updated: 2020-10-22</div>
     </div>
   </body>
 </html>
