--- a/index.html
+++ b/index.html
@@ -162,6 +162,17 @@
         <h2>Professional Experiences</h2>
         <div class="job clearfix">
           <div class="col-xs-3">
+            <div class="profession">Speech and Language Processing Technical Committee (SLTC)</div>
+            <div class="year">2021-2023</div>
+          </div>
+          <div class="col-xs-9">
+            <div class="where">
+              <a href="https://signalprocessingsociety.org/" target="_blank">IEEE Signal Processing Society</a>
+            </div>
+          </div>
+        </div>
+        <div class="job clearfix">
+          <div class="col-xs-3">
             <div class="profession">Publicity Chair</div>
             <div class="year">2020</div>
           </div>
@@ -246,6 +257,14 @@
             <div class="where">
               <a href="http://translit.i2r.a-star.edu.sg/r50/" target="_blank">ACL Special Workshop: Rediscovering 50 Years of Discoveries</a>
             </div>
+          </div>
+        </div>
+        <div class="job clearfix">
+          <div class="col-xs-3">
+            <div class="profession">Area Chair</div>
+          </div>
+          <div class="col-xs-9">
+            <div class="where"><a href="https://2020.emnlp.org/organizers/senior-program-committee" target="_blank">EMNLP 2020</a>, <a href="http://slt2020.org/area_chairs.html" target="_blank">IEEE SLT 2021</a></div>
           </div>
         </div>
         <div class="job clearfix">
@@ -982,7 +1001,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2020-10-22</div>
+      <div id="footer">Last updated: 2020-11-20</div>
     </div>
   </body>
 </html>
