--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <div class="profession">Reviewer</div>
           </div>
           <div class="col-xs-9">
-            <div class="where">AAAI, ACL, ACM-SIGIR, AI Magazine, CSL, CoNLL, EMNLP, ICLR, IEEE ASRU, IEEE ICASSP, IEEE SLT, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, Interspeech, NAACL-HLT, NeurIPS</div>
+            <div class="where">AAAI, ACL, ACM-SIGIR, AI Magazine, CSL, CoNLL, EACL, EMNLP, ICLR, IEEE ASRU, IEEE ICASSP, IEEE SLT, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, Interspeech, NAACL-HLT, NeurIPS</div>
           </div>
         </div>
       </div>
