--- a/index.html
+++ b/index.html
@@ -321,6 +321,25 @@
             <div class="year">2021</div>
           </div>
           <div class="col-xs-11">
+            <div style="display:inline" class="pid_conference">[C57] </div>
+            <div style="display:inline" class="title">Commonsense-Focused Dialogues for Response Generation: An Empirical Study.</div>
+            <div class="author">Pei Zhou, Karthik Gopalakrishnan, Behnam Hedayatnia, <span>Seokhwan Kim</span>, Jay Pujara, Xiang Ren, Yang Liu, Dilek Hakkani-Tur</div>
+            <div class="book">To appear in Proceedings of the 22nd Annual Meeting of the Special Interest Group on Discourse and Dialogue (<a href="https://www.sigdial.org/files/workshops/conference22/" target="_blank">SIGDIAL 2021</a>), Singapore, Jul 2021.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
+            <div style="display:inline" class="pid_conference">[C56] </div>
+            <div style="display:inline" class="title">Generative Conversational Networks.</div>
+            <div class="author">Alexandros Papangelis, Karthik Gopalakrishnan, Aishwarya Padmakumar, <span>Seokhwan Kim</span>, Gokhan Tur, Dilek Hakkani-Tur
+</div>
+            <div class="book">To appear in Proceedings of the 22nd Annual Meeting of the Special Interest Group on Discourse and Dialogue (<a href="https://www.sigdial.org/files/workshops/conference22/" target="_blank">SIGDIAL 2021</a>), Singapore, Jul 2021.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C55] </div>
             <div style="display:inline" class="title">Beyond Domain APIs: Task-oriented Conversational Modeling with Unstructured Knowledge Access Track in DSTC9.<div style="display:inline" class="link"><a href="https://arxiv.org/abs/2101.09276" target="_blank">[preprint]</a></div></div>
             <div class="author"><span>Seokhwan Kim</span>, Mihail Eric, Behnam Hedayatnia, Karthik Gopalakrishnan, Yang Liu, Chao-Wei Huang, Dilek Hakkani-Tur</div>
@@ -1020,7 +1039,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2021-03-09</div>
+      <div id="footer">Last updated: 2021-05-26</div>
     </div>
   </body>
 </html>
