--- a/index.html
+++ b/index.html
@@ -173,6 +173,17 @@
         </div>
         <div class="job clearfix">
           <div class="col-xs-3">
+            <div class="profession">Board Member</div>
+            <div class="year">2021-2023</div>
+          </div>
+          <div class="col-xs-9">
+            <div class="where">
+              <a href="https://www.sigdial.org/" target="_blank">SIGdial</a>
+            </div>
+          </div>
+        </div>
+        <div class="job clearfix">
+          <div class="col-xs-3">
             <div class="profession">Publicity Chair</div>
             <div class="year">2020</div>
           </div>
@@ -320,6 +331,15 @@
           <div class="col-xs-1">
             <div class="year">2021</div>
           </div>
+          <div class="col-xs-11">
+            <div style="display:inline" class="pid_conference">[C58] </div>
+            <div style="display:inline" class="title">Can I Be of Further Assistance? Using Unstructured Knowledge Access to Improve Task-oriented Conversational Modeling.</div>
+            <div class="author">Di Jin, <span>Seokhwan Kim</span>, Dilek Hakkani-Tur</div>
+            <div class="book">To appear in Proceedings of the 1st DialDoc Workshop at ACL-IJCNLP (<a href="https://doc2dial.github.io/workshop2021/" target="_blank">DialDoc</a>), Virtual, Aug 2021.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C57] </div>
             <div style="display:inline" class="title">Commonsense-Focused Dialogues for Response Generation: An Empirical Study.</div>
@@ -1039,7 +1059,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2021-05-26</div>
+      <div id="footer">Last updated: 2021-06-01</div>
     </div>
   </body>
 </html>
