--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           </div>
           <div class="col-xs-9">
             <div class="where">
-              <a href="https://www.sigdial.org/" target="_blank">SIGdial</a>
+              <a href="https://www.sigdial.org/" target="_blank">Special Interest Group on Discourse and Dialogue (SIGdial)</a>
             </div>
           </div>
         </div>
