--- a/index.html
+++ b/index.html
@@ -335,7 +335,16 @@
             <div style="display:inline" class="pid_conference">[C58] </div>
             <div style="display:inline" class="title">Can I Be of Further Assistance? Using Unstructured Knowledge Access to Improve Task-oriented Conversational Modeling.</div>
             <div class="author">Di Jin, <span>Seokhwan Kim</span>, Dilek Hakkani-Tur</div>
-            <div class="book">To appear in Proceedings of the 1st DialDoc Workshop at ACL-IJCNLP (<a href="https://doc2dial.github.io/workshop2021/" target="_blank">DialDoc</a>), Virtual, Aug 2021.</div>
+            <div class="book">Proceedings of the 1st DialDoc Workshop at ACL-IJCNLP (<a href="https://doc2dial.github.io/workshop2021/" target="_blank">DialDoc</a>), Virtual, Aug 2021.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
+            <div style="display:inline" class="pid_journal">[J8] </div>
+            <div style="display:inline" class="title">Editorial: Special Issue on the Eighth Dialog System Technology Challenge.<div style="display:inline" class="link"><a href="https://ieeexplore.ieee.org/document/9509468" target="_blank">[link]</a></div></div>
+            <div class="author"><span>Seokhwan Kim</span>, Hannes Schulz, Chulaka Gunasekara, Chiori Hori, Abhinav Rastogi, Luis Fernando D’Haro</div>
+            <div class="book">IEEE/ACM Transactions on Audio, Speech, and Language Processing, 29 (2434-2436), Aug 2021.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -344,7 +353,7 @@
             <div style="display:inline" class="pid_conference">[C57] </div>
             <div style="display:inline" class="title">Commonsense-Focused Dialogues for Response Generation: An Empirical Study.</div>
             <div class="author">Pei Zhou, Karthik Gopalakrishnan, Behnam Hedayatnia, <span>Seokhwan Kim</span>, Jay Pujara, Xiang Ren, Yang Liu, Dilek Hakkani-Tur</div>
-            <div class="book">To appear in Proceedings of the 22nd Annual Meeting of the Special Interest Group on Discourse and Dialogue (<a href="https://www.sigdial.org/files/workshops/conference22/" target="_blank">SIGDIAL 2021</a>), Singapore, Jul 2021.</div>
+            <div class="book">Proceedings of the 22nd Annual Meeting of the Special Interest Group on Discourse and Dialogue (<a href="https://www.sigdial.org/files/workshops/conference22/" target="_blank">SIGDIAL 2021</a>), Singapore, Jul 2021.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -354,7 +363,16 @@
             <div style="display:inline" class="title">Generative Conversational Networks.</div>
             <div class="author">Alexandros Papangelis, Karthik Gopalakrishnan, Aishwarya Padmakumar, <span>Seokhwan Kim</span>, Gokhan Tur, Dilek Hakkani-Tur
 </div>
-            <div class="book">To appear in Proceedings of the 22nd Annual Meeting of the Special Interest Group on Discourse and Dialogue (<a href="https://www.sigdial.org/files/workshops/conference22/" target="_blank">SIGDIAL 2021</a>), Singapore, Jul 2021.</div>
+            <div class="book">Proceedings of the 22nd Annual Meeting of the Special Interest Group on Discourse and Dialogue (<a href="https://www.sigdial.org/files/workshops/conference22/" target="_blank">SIGDIAL 2021</a>), Singapore, Jul 2021.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
+            <div style="display:inline" class="pid_journal">[J7] </div>
+            <div style="display:inline" class="title">Overview of the Eighth Dialog System Technology Challenge: DSTC8.<div style="display:inline" class="link"><a href="https://ieeexplore.ieee.org/document/9426430" target="_blank">[link]</a></div></div>
+            <div class="author"><span>Seokhwan Kim</span>, Michel Galley, Chulaka Gunasekara, Sungjin Lee, Adam Atkinson, Baolin Peng, Hannes Schulz, Jianfeng Gao, Jinchao Li, Mahmoud Adada, Minlie Huang, Luis Lastras, Jonathan K. Kummerfeld, Walter S. Lasecki, Chiori Hori, Anoop Cherian, Tim K. Marks, Abhinav Rastogi, Xiaoxue Zang, Srinivas Sunkara, Raghav Gupta</div>
+            <div class="book">IEEE/ACM Transactions on Audio, Speech, and Language Processing, 29 (2529-2540), May 2021.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -1059,7 +1077,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2021-06-01</div>
+      <div id="footer">Last updated: 2021-08-10</div>
     </div>
   </body>
 </html>
