--- a/index.html
+++ b/index.html
@@ -332,6 +332,15 @@
             <div class="year">2021</div>
           </div>
           <div class="col-xs-11">
+            <div style="display:inline" class="pid_conference">[C59] </div>
+            <div style="display:inline" class="title">"How Robust r u?": Evaluating Task-Oriented Dialogue Systems on Spoken Conversations.</div>
+            <div class="author"><span>Seokhwan Kim</span>, Yang Liu, Di Jin, Alexandros Papangelis, Behnam Hedayatnia, Karthik Gopalakrishnan, Dilek Hakkani-Tur</div>
+            <div class="book">To appear in Proceedings of the 2021 IEEE Automatic Speech Recognition and Understanding Workshop (<a href="https://asru2021.org/" target="_blank">ASRU 2021</a>), Virtual, Dec 2021.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C58] </div>
             <div style="display:inline" class="title">Can I Be of Further Assistance? Using Unstructured Knowledge Access to Improve Task-oriented Conversational Modeling.</div>
             <div class="author">Di Jin, <span>Seokhwan Kim</span>, Dilek Hakkani-Tur</div>
@@ -1077,7 +1086,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2021-08-10</div>
+      <div id="footer">Last updated: 2021-09-14</div>
     </div>
   </body>
 </html>
