--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           </div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C59] </div>
-            <div style="display:inline" class="title">"How Robust r u?": Evaluating Task-Oriented Dialogue Systems on Spoken Conversations.</div>
+            <div style="display:inline" class="title">"How Robust r u?": Evaluating Task-Oriented Dialogue Systems on Spoken Conversations.<div style="display:inline" class="link"><a href="https://arxiv.org/abs/2109.13489" target="_blank">[preprint]</a></div></div>
             <div class="author"><span>Seokhwan Kim</span>, Yang Liu, Di Jin, Alexandros Papangelis, Behnam Hedayatnia, Karthik Gopalakrishnan, Dilek Hakkani-Tur</div>
             <div class="book">To appear in Proceedings of the 2021 IEEE Automatic Speech Recognition and Understanding Workshop (<a href="https://asru2021.org/" target="_blank">ASRU 2021</a>), Virtual, Dec 2021.</div>
           </div>
@@ -342,7 +342,7 @@
           <div class="col-xs-1"></div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C58] </div>
-            <div style="display:inline" class="title">Can I Be of Further Assistance? Using Unstructured Knowledge Access to Improve Task-oriented Conversational Modeling.</div>
+            <div style="display:inline" class="title">Can I Be of Further Assistance? Using Unstructured Knowledge Access to Improve Task-oriented Conversational Modeling.<div style="display:inline" class="link"><a href="https://aclanthology.org/2021.dialdoc-1.16.pdf" target="_blank">[PDF]</a></div><div style="display:inline" class="link"><a href="https://aclanthology.org/2021.dialdoc-1.16.bib" target="_blank">[bib]</a></div></div>
             <div class="author">Di Jin, <span>Seokhwan Kim</span>, Dilek Hakkani-Tur</div>
             <div class="book">Proceedings of the 1st DialDoc Workshop at ACL-IJCNLP (<a href="https://doc2dial.github.io/workshop2021/" target="_blank">DialDoc</a>), Virtual, Aug 2021.</div>
           </div>
@@ -360,7 +360,7 @@
           <div class="col-xs-1"></div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C57] </div>
-            <div style="display:inline" class="title">Commonsense-Focused Dialogues for Response Generation: An Empirical Study.</div>
+            <div style="display:inline" class="title">Commonsense-Focused Dialogues for Response Generation: An Empirical Study.<div style="display:inline" class="link"><a href="https://aclanthology.org/2021.sigdial-1.13.pdf" target="_blank">[PDF]</a></div><div style="display:inline" class="link"><a href="https://aclanthology.org/2021.sigdial-1.13.bib" target="_blank">[bib]</a></div></div>
             <div class="author">Pei Zhou, Karthik Gopalakrishnan, Behnam Hedayatnia, <span>Seokhwan Kim</span>, Jay Pujara, Xiang Ren, Yang Liu, Dilek Hakkani-Tur</div>
             <div class="book">Proceedings of the 22nd Annual Meeting of the Special Interest Group on Discourse and Dialogue (<a href="https://www.sigdial.org/files/workshops/conference22/" target="_blank">SIGDIAL 2021</a>), Singapore, Jul 2021.</div>
           </div>
@@ -369,7 +369,7 @@
           <div class="col-xs-1"></div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C56] </div>
-            <div style="display:inline" class="title">Generative Conversational Networks.</div>
+            <div style="display:inline" class="title">Generative Conversational Networks.<div style="display:inline" class="link"><a href="https://aclanthology.org/2021.sigdial-1.12.pdf" target="_blank">[PDF]</a></div><div style="display:inline" class="link"><a href="https://aclanthology.org/2021.sigdial-1.12.bib" target="_blank">[bib]</a></div></div>
             <div class="author">Alexandros Papangelis, Karthik Gopalakrishnan, Aishwarya Padmakumar, <span>Seokhwan Kim</span>, Gokhan Tur, Dilek Hakkani-Tur
 </div>
             <div class="book">Proceedings of the 22nd Annual Meeting of the Special Interest Group on Discourse and Dialogue (<a href="https://www.sigdial.org/files/workshops/conference22/" target="_blank">SIGDIAL 2021</a>), Singapore, Jul 2021.</div>
@@ -1086,7 +1086,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2021-09-14</div>
+      <div id="footer">Last updated: 2021-09-29</div>
     </div>
   </body>
 </html>
