--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           </div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C59] </div>
-            <div style="display:inline" class="title">"How Robust r u?": Evaluating Task-Oriented Dialogue Systems on Spoken Conversations.<div style="display:inline" class="link"><a href="https://arxiv.org/abs/2109.13489" target="_blank">[preprint]</a></div></div>
+            <div style="display:inline" class="title">"How robust r u?": Evaluating Task-Oriented Dialogue Systems on Spoken Conversations.<div style="display:inline" class="link"><a href="https://arxiv.org/abs/2109.13489" target="_blank">[preprint]</a></div></div>
             <div class="author"><span>Seokhwan Kim</span>, Yang Liu, Di Jin, Alexandros Papangelis, Behnam Hedayatnia, Karthik Gopalakrishnan, Dilek Hakkani-Tur</div>
             <div class="book">To appear in Proceedings of the 2021 IEEE Automatic Speech Recognition and Understanding Workshop (<a href="https://asru2021.org/" target="_blank">ASRU 2021</a>), Virtual, Dec 2021.</div>
           </div>
@@ -973,6 +973,14 @@
       </div>
       <div class="box">
         <h2>Patents</h2>
+        <div class="publication clearfix">
+          <div class="col-xs-12">
+            <div style="display:inline" class="pid_patent">[P15] </div>
+            <div style="display:inline" class="title">Generating ground truth annotations corresponding to digital image editing dialogues for training state tracking models.</div>
+            <div class="author">Trung Bui, Zahra Rahimi, Yinglan Ma, <span>Seokhwan Kim</span>, Franck Dernoncourt</div>
+            <div class="book">Registration #US11100917B2, USA, 24 Aug 2021.</div>
+          </div>
+        </div>
         <div class="publication clearfix">
           <div class="col-xs-12">
             <div style="display:inline" class="pid_patent">[P14] </div>
