--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <img src="img/photo.jpg" alt="photo" />
             </div>
             <div id="text-header">
-              <h1>Seokhwan Kim<br />Sr. Machine Learning Scientist, <a href="https://amazon.jobs/en/teams/alexa-ai" target="_blank">Amazon Alexa AI</a></h1>
+              <h1>Seokhwan Kim<br />Principal Scientist, <a href="https://amazon.jobs/en/teams/alexa-ai" target="_blank">Amazon Alexa AI</a></h1>
             </div>
           </div>
         </div>
@@ -83,8 +83,20 @@
         <h2>Work Experiences</h2>
         <div class="job clearfix">
           <div class="col-xs-3">
+            <div class="profession">Principal Scientist</div>
+            <div class="year">Oct 2021 -</div>
+          </div>
+          <div class="col-xs-9">
+            <div class="where">
+              <a href="https://amazon.jobs/en/teams/alexa-ai" target="_blank">Amazon</a>
+            </div>
+            <div class="description">Alexa AI</div>
+          </div>
+        </div>
+        <div class="job clearfix">
+          <div class="col-xs-3">
             <div class="profession">Sr. Machine Learning Scientist</div>
-            <div class="year">Jun 2019 -</div>
+            <div class="year">Jun 2019 - Oct 2021</div>
           </div>
           <div class="col-xs-9">
             <div class="where">
@@ -1094,7 +1106,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2021-09-29</div>
+      <div id="footer">Last updated: 2021-10-10</div>
     </div>
   </body>
 </html>
