--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <h2>Work Experiences</h2>
         <div class="job clearfix">
           <div class="col-xs-3">
-            <div class="profession">Principal Scientist</div>
+            <div class="profession">Principal Applied Scientist</div>
             <div class="year">Oct 2021 -</div>
           </div>
           <div class="col-xs-9">
@@ -95,7 +95,7 @@
         </div>
         <div class="job clearfix">
           <div class="col-xs-3">
-            <div class="profession">Sr. Machine Learning Scientist</div>
+            <div class="profession">Senior Applied Scientist</div>
             <div class="year">Jun 2019 - Oct 2021</div>
           </div>
           <div class="col-xs-9">
