--- a/index.html
+++ b/index.html
@@ -174,6 +174,17 @@
         <h2>Professional Experiences</h2>
         <div class="job clearfix">
           <div class="col-xs-3">
+            <div class="profession">Virtual Infrastructure Co-Chair</div>
+            <div class="year">2022</div>
+          </div>
+          <div class="col-xs-9">
+            <div class="where">
+              <a href="http://coling2022.org/" target="_blank">COLING 2022</a>
+            </div>
+          </div>
+        </div>
+        <div class="job clearfix">
+          <div class="col-xs-3">
             <div class="profession">Speech and Language Processing Technical Committee (SLTC)</div>
             <div class="year">2021-2023</div>
           </div>
@@ -344,10 +355,19 @@
             <div class="year">2021</div>
           </div>
           <div class="col-xs-11">
+            <div style="display:inline" class="pid_conference">[C60] </div>
+            <div style="display:inline" class="title">Towards Zero and Few-shot Knowledge-seeking Turn Detection in Task-orientated Dialogue Systems.</div>
+            <div class="author">Di Jin, Shuyang Gao, <span>Seokhwan Kim</span>, Yang Liu, Dilek Hakkani-Tur</div>
+            <div class="book">Proceedings of the Efficient Natural Language and Speech Processing NeurIPS Workshop (<a href="https://neurips2021-nlp.github.io/" target="_blank">ENLSP 2021</a>), Virtual, Dec 2021.<div style="display:inline" class="rate"> (Best Paper% acceptance)</div></div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C59] </div>
             <div style="display:inline" class="title">"How robust r u?": Evaluating Task-Oriented Dialogue Systems on Spoken Conversations.<div style="display:inline" class="link"><a href="https://arxiv.org/abs/2109.13489" target="_blank">[preprint]</a></div></div>
             <div class="author"><span>Seokhwan Kim</span>, Yang Liu, Di Jin, Alexandros Papangelis, Behnam Hedayatnia, Karthik Gopalakrishnan, Dilek Hakkani-Tur</div>
-            <div class="book">To appear in Proceedings of the 2021 IEEE Automatic Speech Recognition and Understanding Workshop (<a href="https://asru2021.org/" target="_blank">ASRU 2021</a>), Virtual, Dec 2021.</div>
+            <div class="book">Proceedings of the 2021 IEEE Automatic Speech Recognition and Understanding Workshop (<a href="https://asru2021.org/" target="_blank">ASRU 2021</a>), Virtual, Dec 2021.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -1106,7 +1126,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2021-10-10</div>
+      <div id="footer">Last updated: 2021-12-16</div>
     </div>
   </body>
 </html>
