--- a/index.html
+++ b/index.html
@@ -352,10 +352,39 @@
         <h2>Publications</h2>
         <div class="publication clearfix">
           <div class="col-xs-1">
+            <div class="year">2022</div>
+          </div>
+          <div class="col-xs-11">
+            <div class="pid_conference" style="display:inline">[C63] </div>
+            <div class="title" style="display:inline">Knowledge-Grounded Conversational Data Augmentation with Generative Conversational Networks.<div class="link" style="display:inline"><a target="_blank" href="https://arxiv.org/abs/2207.11363">[preprint]</a></div></div>
+            <div class="author">Yen-Ting Lin, Alexandros Papangelis, <span>Seokhwan Kim</span>, Dilek Hakkani-Tur</div>
+            <div class="book">To appear in Proceedings of the 23rd Annual Meeting of the Special Interest Group on Discourse and Dialogue (<a target="_blank" href="https://2022.sigdial.org/">SIGDIAL 2022</a>), Edinburgh, Sep 2022.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
+            <div class="pid_conference" style="display:inline">[C62] </div>
+            <div class="title" style="display:inline">Think Before You Speak: Explicitly Generating Implicit Commonsense Knowledge for Response Generation.<div class="link" style="display:inline"><a target="_blank" href="https://aclanthology.org/2022.acl-long.88.pdf">[PDF]</a></div><div class="link" style="display:inline"><a target="_blank" href="https://aclanthology.org/2022.acl-long.88.bib">[bib]</a></div></div>
+            <div class="author">Pei Zhou, Karthik Gopalakrishnan, Behnam Hedayatnia, <span>Seokhwan Kim</span>, Jay Pujara, Xiang Ren, Yang Liu, Dilek Hakkani-Tur</div>
+            <div class="book">Proceedings of the 60th Annual Meeting of the Association for Computational Linguistics (<a target="_blank" href="https://www.2022.aclweb.org/">ACL 2022</a>), vol. 1, pp. 1237-1252, Dublin, May 2022.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
+            <div class="pid_journal" style="display:inline">[J9] </div>
+            <div class="title" style="display:inline">Towards Textual Out-of-Domain Detection Without In-Domain Labels.<div class="link" style="display:inline"><a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/9741317">[link]</a></div></div>
+            <div class="author">Di Jin, Shuyang Gao, <span>Seokhwan Kim</span>, Yang Liu, Dilek Hakkani-Tur</div>
+            <div class="book">IEEE/ACM Transactions on Audio, Speech, and Language Processing, 30 (1386-1395), Mar 2022.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1">
             <div class="year">2021</div>
           </div>
           <div class="col-xs-11">
-            <div class="pid_conference" style="display:inline">[C60] </div>
+            <div class="pid_conference" style="display:inline">[C61] </div>
             <div class="title" style="display:inline">Towards Zero and Few-shot Knowledge-seeking Turn Detection in Task-orientated Dialogue Systems. (Best Paper)</div>
             <div class="author">Di Jin, Shuyang Gao, <span>Seokhwan Kim</span>, Yang Liu, Dilek Hakkani-Tur</div>
             <div class="book">Proceedings of the Efficient Natural Language and Speech Processing NeurIPS Workshop (<a target="_blank" href="https://neurips2021-nlp.github.io/">ENLSP 2021</a>), Virtual, Dec 2021.</div>
@@ -364,10 +393,19 @@
         <div class="publication clearfix">
           <div class="col-xs-1"></div>
           <div class="col-xs-11">
-            <div class="pid_conference" style="display:inline">[C59] </div>
+            <div class="pid_conference" style="display:inline">[C60] </div>
             <div class="title" style="display:inline">"How robust r u?": Evaluating Task-Oriented Dialogue Systems on Spoken Conversations.<div class="link" style="display:inline"><a target="_blank" href="https://arxiv.org/abs/2109.13489">[preprint]</a></div></div>
             <div class="author"><span>Seokhwan Kim</span>, Yang Liu, Di Jin, Alexandros Papangelis, Behnam Hedayatnia, Karthik Gopalakrishnan, Dilek Hakkani-Tur</div>
             <div class="book">Proceedings of the 2021 IEEE Automatic Speech Recognition and Understanding Workshop (<a target="_blank" href="https://asru2021.org/">ASRU 2021</a>), Virtual, Dec 2021.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
+            <div class="pid_conference" style="display:inline">[C59] </div>
+            <div class="title" style="display:inline">Rome was built in 1776: A case study on factual correctness in knowledge-grounded response generation.<div class="link" style="display:inline"><a target="_blank" href="https://arxiv.org/abs/2110.05456">[preprint]</a></div></div>
+            <div class="author">Sashank Santhanam, Behnam Hedayatnia, Spandana Gella, Aishwarya Padmakumar, <span>Seokhwan Kim</span>, Yang Liu, Dilek Hakkani-Tur</div>
+            <div class="book">Proceedings of the 3rd Workshop on NLP for Conversational AI (<a target="_blank" href="https://sites.google.com/view/3rdnlp4convai/home">NLP4ConvAI</a>), Punta Cana, Nov 2021.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -1126,7 +1164,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2021-12-16</div>
+      <div id="footer">Last updated: 2022-08-10</div>
     </div>
   </body>
 </html>
