--- a/index.html
+++ b/index.html
@@ -1045,6 +1045,22 @@
         <h2>Patents</h2>
         <div class="publication clearfix">
           <div class="col-xs-12">
+            <div class="pid_patent" style="display:inline">[P17] </div>
+            <div class="title" style="display:inline">Generating a response to a user query utilizing visual features of a video segment and a query-response-neural network.</div>
+            <div class="author">Wentian Zhao, <span>Seokhwan Kim</span>, Ning Xu, Hailin Jin</div>
+            <div class="book">Registration #US11244167B2, USA, 08 Feb 2022.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-12">
+            <div class="pid_patent" style="display:inline">[P16] </div>
+            <div class="title" style="display:inline">Automatic text segmentation based on relevant context.</div>
+            <div class="author">Chan Young Park, <span>Seokhwan Kim</span>, Franck Dernoncourt, Nedim Lipka, Walter W. Chang</div>
+            <div class="book">Registration #US11210470B2, USA, 28 Dec 2021.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-12">
             <div class="pid_patent" style="display:inline">[P15] </div>
             <div class="title" style="display:inline">Generating ground truth annotations corresponding to digital image editing dialogues for training state tracking models.</div>
             <div class="author">Trung Bui, Zahra Rahimi, Yinglan Ma, <span>Seokhwan Kim</span>, Franck Dernoncourt</div>
