--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             <div class="year">2022</div>
           </div>
           <div class="col-xs-11">
-            <div class="pid_conference" style="display:inline">[C63] </div>
+            <div class="pid_conference" style="display:inline">[C64] </div>
             <div class="title" style="display:inline">Knowledge-Grounded Conversational Data Augmentation with Generative Conversational Networks.<div class="link" style="display:inline"><a target="_blank" href="https://arxiv.org/abs/2207.11363">[preprint]</a></div></div>
             <div class="author">Yen-Ting Lin, Alexandros Papangelis, <span>Seokhwan Kim</span>, Dilek Hakkani-Tur</div>
             <div class="book">To appear in Proceedings of the 23rd Annual Meeting of the Special Interest Group on Discourse and Dialogue (<a target="_blank" href="https://2022.sigdial.org/">SIGDIAL 2022</a>), Edinburgh, Sep 2022.</div>
@@ -364,7 +364,7 @@
         <div class="publication clearfix">
           <div class="col-xs-1"></div>
           <div class="col-xs-11">
-            <div class="pid_conference" style="display:inline">[C62] </div>
+            <div class="pid_conference" style="display:inline">[C63] </div>
             <div class="title" style="display:inline">Think Before You Speak: Explicitly Generating Implicit Commonsense Knowledge for Response Generation.<div class="link" style="display:inline"><a target="_blank" href="https://aclanthology.org/2022.acl-long.88.pdf">[PDF]</a></div><div class="link" style="display:inline"><a target="_blank" href="https://aclanthology.org/2022.acl-long.88.bib">[bib]</a></div></div>
             <div class="author">Pei Zhou, Karthik Gopalakrishnan, Behnam Hedayatnia, <span>Seokhwan Kim</span>, Jay Pujara, Xiang Ren, Yang Liu, Dilek Hakkani-Tur</div>
             <div class="book">Proceedings of the 60th Annual Meeting of the Association for Computational Linguistics (<a target="_blank" href="https://www.2022.aclweb.org/">ACL 2022</a>), vol. 1, pp. 1237-1252, Dublin, May 2022.</div>
@@ -377,6 +377,15 @@
             <div class="title" style="display:inline">Towards Textual Out-of-Domain Detection Without In-Domain Labels.<div class="link" style="display:inline"><a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/9741317">[link]</a></div></div>
             <div class="author">Di Jin, Shuyang Gao, <span>Seokhwan Kim</span>, Yang Liu, Dilek Hakkani-Tur</div>
             <div class="book">IEEE/ACM Transactions on Audio, Speech, and Language Processing, 30 (1386-1395), Mar 2022.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
+            <div class="pid_conference" style="display:inline">[C62] </div>
+            <div class="title" style="display:inline">Knowledge-grounded Task-oriented Dialogue Modeling on Spoken Conversations Track at DSTC10.<div class="link" style="display:inline"><a target="_blank" href="https://github.com/shanemoon/dstc10/raw/main/papers/dstc10_aaai22_track2_41.pdf">[PDF]</a></div><div class="link" style="display:inline"><a target="_blank" href="https://drive.google.com/file/d/1EV5W36xP2ODUDBoeqAwKEDh_DwWOLQ9d/view?usp=sharing">[bib]</a></div></div>
+            <div class="author"><span>Seokhwan Kim</span>, Yang Liu, Di Jin, Alexandros Papangelis, Behnam Hedayatnia, Karthik Gopalakrishnan, Dilek Hakkani-Tur</div>
+            <div class="book">Proceedings of the AAAI-22 Workshop on Dialog System Technology Challenges (<a target="_blank" href="https://dstc10.dstc.community/aaai-22-workshop">DSTC10</a>), Virtual, Feb 2022.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -1180,7 +1189,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2022-08-10</div>
+      <div id="footer">Last updated: 2022-08-22</div>
     </div>
   </body>
 </html>
